lab03-k8s-aks/17_tls/6_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/send_timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  tls:
    - secretName: secret1
      hosts:
        - wsb-azure.motogang.pl
  rules:
    - host: wsb-azure.motogang.pl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tls-nginx
                port:
                  number: 80
